--- a/index.html
+++ b/index.html
@@ -5,42 +5,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    <ul id="categories">
-        <li class="item">
-            <h2>Животные</h2>
+    <div class="task-01">
+        <ul id="categories">
+            <li class="item">
+                <h2>Животные</h2>
 
-            <ul>
-                <li>Кот</li>
-                <li>Хомяк</li>
-                <li>Лошадь</li>
-                <li>Попугай</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Продукты</h2>
+                <ul>
+                    <li>Кот</li>
+                    <li>Хомяк</li>
+                    <li>Лошадь</li>
+                    <li>Попугай</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Продукты</h2>
 
-            <ul>
-                <li>Хлеб</li>
-                <li>Петрушка</li>
-                <li>Творог</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Технологии</h2>
+                <ul>
+                    <li>Хлеб</li>
+                    <li>Петрушка</li>
+                    <li>Творог</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Технологии</h2>
 
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node</li>
-            </ul>
-        </li>
-    </ul>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="task-02">
+        <ul id="ingredients"></ul>
+    </div>
+    <div class="task-03">
+        <ul id="gallery"></ul>
+    </div>
+
     <script type="module" src="./task-01.js"></script>
+    <script type="module" src="./task-02.js"></script>
+    <script type="module" src="./task-03.js"></script>
+    <!-- <script type="module" src="./task-04.js"></script> -->
 </body>
 
 </html>
