almoust all done

--- a/index.html
+++ b/index.html
@@ -49,11 +49,35 @@
     <div class="task-03">
         <ul id="gallery"></ul>
     </div>
+    <div class="task-04">
+        <div id="counter">
+            <button type="button" data-action="decrement">-1</button>
+            <span id="value">0</span>
+            <button type="button" data-action="increment">+1</button>
+        </div>
+    </div>
+    <div class="task-05">
+        <input type="text" placeholder="Ваше имя?" id="name-input" />
+        <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    </div>
+    <div class="task-06">
+        <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    </div>
+    <div class="task-07">
+
+        <input id="font-size-control" type="range" min="8" max="38" value="12" step="2" />
+        <br />
+        <span id="text">Абракадабра!</span>
+    </div>
 
     <script type="module" src="./task-01.js"></script>
     <script type="module" src="./task-02.js"></script>
     <script type="module" src="./task-03.js"></script>
-    <!-- <script type="module" src="./task-04.js"></script> -->
+    <script type="module" src="./task-04.js"></script>
+    <script type="module" src="./task-05.js"></script>
+    <script type="module" src="./task-06.js"></script>
+    <script type="module" src="./task-07.js"></script>
+    <script type="module" src="./task-08.js"></script>
 </body>
 
 </html>
