--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
         <br />
         <span id="text">Абракадабра!</span>
     </div>
+    <div class="task-08">
+        <div id="controls">
+            <input type="number" min="0" max="100" step="1" />
+            <button type="button" data-action="render">Создать</button>
+            <button type="button" data-action="destroy">Очистить</button>
+        </div>
+
+        <div id="boxes"></div>
+    </div>
+    <a href="./task-08.html"> Задание 08</a>
 
     <script type="module" src="./task-01.js"></script>
     <script type="module" src="./task-02.js"></script>
